testing/tests/roundtrip/invalid/semantic/typecheck/comparison_expr_in_arith_list/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/comparison_expr_in_arith_list/input.essence:2:19:
  |
2 | such that sum([x, 2 >= 3, 5 - 10]) > 0
  |                   ^^^^^^
Type error:
	Expected: int
	Got: bool

